[tool.poetry]
name = "audio-image"
version = "0.1.0"
description = ""
authors = ["arielfernandes <0.arielfernandes.0@gmail.com>"]
readme = "README.md"
packages = [{include = "audio_image"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
librosa = "^0.10.0.post2"
matplotlib = "^3.7.1"
pydash = "^7.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
