[project]
name = "audio-image"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "arielfernandes", email = "0.arielfernandes.0@gmail.com" }
]
dependencies = [
    "numpy>=1.24.3",
    "librosa>=0.10.0.post2",
    "matplotlib>=3.7.1",
    "pydash>=7.0.4",
    "fastapi[standard]>=0.115.0"
]

[dependency-groups]
dev = [
    "pytest>=7.3.2",
    "taskipy>=1.14.1,<2.0.0",
    "ruff>=0.15.4,<0.16.0",
    "typos>=1.44.0,<2.0.0",
    "pyright>=1.1.408",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
markers = [
    "benchmark: marks tests as benchmark tests",
    "load: marks tests as load tests",
]
addopts = "-p no:warnings -m 'not load'"

[tool.taskipy.tasks]
pre_lint = 'typos'
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
app = 'fastapi dev app/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'
